--- a/src/App.css
+++ b/src/App.css
@@ -173,7 +173,7 @@ a:hover{
 /* Projects */
 #Projects {
   background-color: #313131;
-  min-height: 100vh;
+  min-width: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
