--- a/src/App.css
+++ b/src/App.css
@@ -148,6 +148,7 @@ a:hover{
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  margin-right: 20px;
 }
 
 
@@ -267,6 +268,10 @@ a:hover{
 .specCode{
   margin: 0px 10px 5px 0px;
   border-bottom: white 1px solid;
+}
+
+.toggle{
+  display: none;
 }
 
 /* Contact */
@@ -445,6 +450,7 @@ a:hover{
   .AboutLeft{
     align-items: center;
     width: 80%;
+    margin-right: 0px;
   }
   .AboutImg{
     width: 80%;
@@ -504,5 +510,9 @@ a:hover{
   }
   .infoSec1{
     font-size: 28px;
+  }
+  .toggle{
+    display: flex;
+    font-size: 20px;
   }
 }
